--- a/Ejem1_ComponentesBasicos/app/src/main/res/layout/activity_main.xml
+++ b/Ejem1_ComponentesBasicos/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
@@ -16,41 +16,90 @@
         android:textAlignment="center"
         android:textSize="40sp" />
 
-    <EditText
-        android:id="@+id/NombreUsuario"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text" />
+        android:layout_weight="0"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/texto_saludo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="239dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            app:srcCompat="@android:drawable/star_big_on"
+            tools:srcCompat="@tools:sample/avatars[2]" />
 
-    <Button
-        android:id="@+id/boton_datos"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.2"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/NombreUsuario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="text" />
+
+            <TextView
+                android:id="@+id/texto_saludo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/boton_datos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/descargar_fotochop_zip"
+                android:textSize="21sp" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <Switch
+        android:id="@+id/switch1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/descargar_fotochop_zip"
-        android:textSize="21sp" />
+        android:minHeight="48dp"
+        android:text="Actualizar" />
 
-    <EditText
-        android:id="@+id/editTextTextPassword"
+    <RadioGroup
+        android:id="@+id/RGroup_Estado_Civil"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword" />
+        android:layout_height="wrap_content">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/CajitaDelPecado"
+        <RadioButton
+            android:id="@+id/radioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Juan eres tonto" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:text="@string/soltero" />
+
+        <RadioButton
+            android:id="@+id/radioButton2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/casado" />
+
+        <RadioButton
+            android:id="@+id/radioButton3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/n_c" />
+
+    </RadioGroup>
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/color_favorito"
+        android:minHeight="48dp" />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
