--- a/Ejem02_TrabajandoConClases/app/src/main/res/layout/activity_main.xml
+++ b/Ejem02_TrabajandoConClases/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,18 @@
                 android:text="@{usuario.contrasena}"/>
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/texto_edad"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Edad"
+                android:text="@{String.valueOf(usuario.edad)}" />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/boton_guardar"
             android:layout_width="match_parent"
