--- a/Ejercicio2_ComponentesBasicos2/app/src/main/res/layout/activity_main.xml
+++ b/Ejercicio2_ComponentesBasicos2/app/src/main/res/layout/activity_main.xml
@@ -1,100 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/material_dynamic_neutral_variant50"
-        android:minHeight="35dp"
-        android:theme="?attr/actionBarTheme"
-        app:subtitle="@string/app_name"
-        app:subtitleTextColor="#D3D1D1" />
-
-    <EditText
-        android:id="@+id/texto_datos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30px"
-        android:layout_marginTop="15px"
-        android:background="@drawable/edittext_border"
-        android:backgroundTint="#FF9800"
-        android:ems="10"
-        android:hint="Introdu"
-        android:inputType="text" />
-
-    <RadioGroup
-        android:id="@+id/estadoCivilRG"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RadioButton
-            android:id="@+id/rbSoltero"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30px"
-            android:checked="true"
-            android:text="Soltero"
-            android:textColorLink="#62E644" />
-
-        <RadioButton
-            android:id="@+id/rbCasado"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30px"
-            android:text="Casado" />
-    </RadioGroup>
-
-    <Spinner
-        android:id="@+id/selectorCiudades"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30px"
-        android:backgroundTint="#000000" />
+    <data>
+        <variable
+            name="usuario"
+            type="com.example.ejercicio2_componentesbasicos2.Persona" />
+    </data>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/main"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30px"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        tools:context=".MainActivity">
 
-        <CheckBox
-            android:id="@+id/checkFutbol"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Fútbol" />
+            android:background="@color/material_dynamic_neutral_variant50"
+            android:minHeight="35dp"
+            android:theme="?attr/actionBarTheme"
+            app:subtitle="@string/app_name"
+            app:subtitleTextColor="#D3D1D1" />
 
-        <CheckBox
-            android:id="@+id/checkBaloncesto"
+        <EditText
+            android:id="@+id/texto_datos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Baloncesto" />
+            android:layout_marginLeft="30px"
+            android:layout_marginTop="15px"
+            android:background="@drawable/edittext_border"
+            android:backgroundTint="#FF9800"
+            android:ems="10"
+            android:hint="Introdu"
+            android:inputType="text" />
+
+        <RadioGroup
+            android:id="@+id/estadoCivilRG"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                android:id="@+id/rbSoltero"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30px"
+                android:checked="true"
+                android:text="Soltero"
+                android:textColorLink="#62E644" />
+
+            <RadioButton
+                android:id="@+id/rbCasado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30px"
+                android:text="Casado" />
+        </RadioGroup>
+
+        <Spinner
+            android:id="@+id/selectorCiudades"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30px"
+            android:backgroundTint="#000000" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30px"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/checkFutbol"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Fútbol" />
+
+            <CheckBox
+                android:id="@+id/checkBaloncesto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Baloncesto" />
+        </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/checkTenis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30px"
+            android:text="Tenis" />
+
+        <Button
+            android:id="@+id/botonGuardar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40px"
+            android:backgroundTint="@color/material_dynamic_neutral_variant70"
+            android:text="Guardar"
+            android:textColor="#000000"
+            app:cornerRadius="0px" />
+
     </LinearLayout>
-
-    <CheckBox
-        android:id="@+id/checkTenis"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30px"
-        android:text="Tenis" />
-
-    <Button
-        android:id="@+id/botonGuardar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40px"
-        android:backgroundTint="@color/material_dynamic_neutral_variant70"
-        android:text="Guardar"
-        android:textColor="#000000"
-        app:cornerRadius="0px" />
-
-</LinearLayout>
+</layout>
