--- a/Ejercicio2_ComponentesBasicos2/app/src/main/res/layout/activity_main.xml
+++ b/Ejercicio2_ComponentesBasicos2/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,53 @@
             android:backgroundTint="#FF9800"
             android:ems="10"
             android:hint="Introdu"
+            android:text="@{usuario.nombre}"
             android:inputType="text" />
+
+        <EditText
+            android:id="@+id/texto_edad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30px"
+            android:layout_marginTop="15px"
+            android:background="@drawable/edittext_border"
+            android:backgroundTint="#FF9800"
+            android:ems="10"
+            android:hint="Edad"
+            android:text="@{String.valueOf(usuario.edad)}"
+            android:inputType="text" />
+
+        <LinearLayout
+            android:id="@+id/padre_rojo"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="#DD1515"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/texto_padre_rojo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Padre rojo"
+                android:textSize="24dp" />
+
+            <LinearLayout
+                android:id="@+id/hijo_amarillo"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:background="#E4CF13"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/texto_hijo_amarillo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Hijo amarillo"
+                    android:textSize="24dp" />
+            </LinearLayout>
+        </LinearLayout>
 
         <RadioGroup
             android:id="@+id/estadoCivilRG"
@@ -48,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30px"
-                android:checked="true"
+                android:checked="@{usuario.soltero}"
                 android:text="Soltero"
                 android:textColorLink="#62E644" />
 
@@ -57,6 +103,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30px"
+                android:checked="@{!usuario.soltero}"
                 android:text="Casado" />
         </RadioGroup>
 
@@ -78,14 +125,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Fútbol" />
+                android:text="Fútbol"
+                android:checked="@{usuario.deportes.contains(`Futbol`)}"/>
 
             <CheckBox
                 android:id="@+id/checkBaloncesto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Baloncesto" />
+                android:text="Baloncesto"
+                android:checked="@{usuario.deportes.contains(`Baloncesto`)}"/>
         </LinearLayout>
 
         <CheckBox
@@ -93,7 +142,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30px"
-            android:text="Tenis" />
+            android:text="Tenis"
+            android:checked="@{usuario.deportes.contains(`Tenis `)}"/>
 
         <Button
             android:id="@+id/botonGuardar"
