--- a/Ejercicio3_SpinnerListView/app/src/main/res/layout/activity_main.xml
+++ b/Ejercicio3_SpinnerListView/app/src/main/res/layout/activity_main.xml
@@ -1,67 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:backgroundTint="#009688"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:subtitle="@string/app_name"
-        app:subtitleTextColor="#FFFFFF" />
-
-    <EditText
-        android:id="@+id/texto_dato"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#B30A0A"
-        android:ems="10"
-        android:hint="Inserte un dato"
-        android:inputType="text" />
+    <data>
+        <variable
+            name="dato"
+            type="com.example.ejercicio2_spinnerlistview.Dato" />
+    </data>
 
     <LinearLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:background="#C9E8AD"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
 
-        <Button
-            android:id="@+id/bAniadir"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:backgroundTint="#A2A0A0"
-            android:text="Añadir"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            app:cornerRadius="15px" />
+            android:background="?attr/colorPrimary"
+            android:backgroundTint="#009688"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:subtitle="@string/app_name"
+            app:subtitleTextColor="#FFFFFF" />
 
-        <Button
-            android:id="@+id/bBorrar"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/texto_dato"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:backgroundTint="#A2A0A0"
-            android:text="Borrar"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            app:cornerRadius="15px" />
+            android:backgroundTint="#B30A0A"
+            android:ems="10"
+            android:hint="Inserte un dato"
+            android:inputType="text"
+            android:text="@{dato.nombre}" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/bAniadir"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#A2A0A0"
+                android:text="Añadir"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                app:cornerRadius="15px" />
+
+            <Button
+                android:id="@+id/bBorrar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#A2A0A0"
+                android:text="Borrar"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                app:cornerRadius="15px" />
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/listaDatos"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="#8BC34A"
+            android:choiceMode="singleChoice" />
+
     </LinearLayout>
-
-    <ListView
-        android:id="@+id/listaDatos"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:choiceMode="singleChoice" />
-
-</LinearLayout>
+</layout>
