--- a/Examen1/app/src/main/res/layout/activity_main.xml
+++ b/Examen1/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
 
     <data>
     <variable
-        name="Alumno"
+        name="alumno"
         type="com.example.examen1.Alumno" />
     </data>
 
@@ -15,19 +15,6 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/black"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:subtitle="@string/app_name"
-            app:subtitleTextColor="#FFFFFF" />
-
         <Button
             android:id="@+id/botonOpciones"
             android:layout_width="66dp"
@@ -36,37 +23,39 @@
             android:backgroundTint="#000000"
             app:iconSize="25dp"
             app:iconTint="@color/black"
-            app:layout_constraintEnd_toEndOf="@id/toolbar"
-            app:layout_constraintTop_toTopOf="@id/toolbar" />
+            tools:layout_editor_absoluteX="346dp" />
 
         <TextView
             android:id="@+id/textoNombre"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
-            android:text="Inserte Nombre"
+            android:text="@string/inserte_nombre"
             app:layout_constraintEnd_toStartOf="@id/campoNombre"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+            app:layout_constraintHorizontal_weight="0.4"
+            app:layout_constraintStart_toStartOf="@id/guideline2"
+            app:layout_constraintTop_toBottomOf="@id/botonOpciones"
+            tools:layout_editor_absoluteY="112dp" />
 
         <EditText
             android:id="@+id/campoNombre"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
-            android:text="@{Alumno.toString()}"
+            android:text="@{alumno.toString()}"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_weight="0.6"
             app:layout_constraintStart_toEndOf="@id/textoNombre"
-            app:layout_constraintTop_toTopOf="@id/textoNombre"  android:layout_height="wrap_content"/>
+            app:layout_constraintTop_toTopOf="@id/textoNombre" />
 
         <TextView
             android:id="@+id/textoCalificacion"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Inserte Calificación"
+            android:text="@string/inserte_calificacion"
             app:layout_constraintEnd_toStartOf="@id/ListaCalificacion"
+            app:layout_constraintHorizontal_weight="0.4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/campoNombre" />
 
@@ -74,9 +63,11 @@
             android:id="@+id/ListaCalificacion"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:entries="@array/listaCalificaciones"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_weight="0.6"
             app:layout_constraintStart_toEndOf="@id/textoCalificacion"
-            app:layout_constraintTop_toBottomOf="@id/campoNombre"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/campoNombre" />
 
         <TextView
             android:id="@+id/textoSuspensos"
@@ -92,5 +83,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/textoSuspensos" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="77dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="49dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
